if(${GPU_TARGET} STREQUAL "cuda")
    add_library(runtime_api STATIC target/runtime_api_cuda.cpp)
    target_link_libraries(runtime_api PUBLIC CUDA::cudart)
elseif(${GPU_TARGET} STREQUAL "hip")
    add_library(runtime_api STATIC target/runtime_api_hip.cpp)
    target_link_libraries(runtime_api PUBLIC hip::host)
endif()
set_target_properties(runtime_api PROPERTIES POSITION_INDEPENDENT_CODE ON)

function(set_source_files_language)
    if(${GPU_TARGET} STREQUAL "cuda")
        set_source_files_properties(${ARGN} PROPERTIES LANGUAGE CUDA)
    elseif(${GPU_TARGET} STREQUAL "hip")
        set_source_files_properties(${ARGN} PROPERTIES LANGUAGE HIP)
    endif()
endfunction()

add_subdirectory(baryon)
add_subdirectory(meson)

add_library(contract SHARED contract.cpp)
target_link_libraries(contract PRIVATE baryon meson)
target_link_libraries(contract PRIVATE runtime_api)
